@@ -6,12 +6,13 @@ and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.
 
 ## [1.3.0] - 2021-10-22
  - Added Copy Name and Copy Index to blend shape properties.
+ - Added Clear to the SerializedProperty array context menu.
 
 ## [1.2.2] - 2021-10-22
  - Added support for 2021.1+.
 
 ## [1.2.1] - 2021-07-29
- - Added Reverse to the SerializedProperty context menu.
+ - Added Reverse to the SerializedProperty array context menu.
 
 ## [1.2.0] - 2020-11-06
  - Moved StyleUtils and HelpBox to the Vertx.Utilities package. This also changes their namespace.
